--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "redux-training",
+  "name": "ski-day-counter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/babel-node ./src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "challenge-a": "babel-node ./src/challenges/FETCH_RESORT_NAMES.js",
+    "challenge-b": "babel-node ./src/challenges/CANCEL_FETCHING.js",
+    "challenge-c": "babel-node ./src/challenges/CLEAR_SUGGESTIONS.js",
+    "challenge-d": "babel-node ./src/challenges/CHANGE_SUGGESTIONS.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nwoodard-cs/redux-training.git"
-  },
-  "author": "Nicole Woodard",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nwoodard-cs/redux-training/issues"
+  "dependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0"
   },
-  "homepage": "https://github.com/nwoodard-cs/redux-training#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.16.0",
+    "expect": "^1.20.2"
   }
 }
