--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.2.6",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "expect": "^1.20.2",
     "json-loader": "^0.5.4",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
